Set up new angular app for product guides

--- a/locales/en.json
+++ b/locales/en.json
@@ -17,6 +17,9 @@
   "design": {
     "title": "Design"
   },
+  "guides": {
+    "title": "Guides"
+  },
   "login": {
     "new": {
       "title": "Log In",
