Web based report

--- a/locales/en.json
+++ b/locales/en.json
@@ -77,6 +77,9 @@
   "privacy": {
     "title": "Privacy Policy"
   },
+  "reports": {
+    "title": "Reports - %s"
+  },
   "run-reporting": {
     "title": "Run Reporting"
   },
